DS-72 fixed toast align on ie/safari/ff

--- a/src/components/Toast/style.scss
+++ b/src/components/Toast/style.scss
@@ -7,7 +7,9 @@ $base-class: 'toast';
 
 .#{$base-class} {
   display: inline-flex;
-  align-items: flex-start;
+  flex: 0 1 auto;
+  justify-content: flex-start;
+  align-items: center;
   box-sizing: border-box;
   min-width: 300px;
   max-width: 500px;
@@ -41,12 +43,14 @@ $base-class: 'toast';
 
   &__actions {
     margin-left: auto;
-    display: flex;
-    align-items: center;
     height: 20px;
 
     &-close {
       margin-left: 16px;
+      display: flex;
+      align-items: center;
+      flex: 0 1 auto;
+      height: 100%;
 
       svg {
         display: flex;
